<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".faq">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">
            <TextView
                android:id="@+id/faq1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00ffffff"
                android:gravity="center_vertical"
                android:padding="15dp"
                android:text="@string/faq1_title"
                android:textColor="#494748"
                android:fontFamily="@font/gmarketmedium"
                android:textSize="15dp" />
            <LinearLayout
                android:id="@+id/faq1_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00ffffff"
                    android:gravity="left"
                    android:text="@string/faq1_content"
                    android:padding="15dp"
                    android:textColor="#949596"
                    android:fontFamily="@font/gmarketmedium"
                    android:textSize="11dp" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerInParent="true"
                android:background="#949596"/>
            <TextView
                android:id="@+id/faq2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00ffffff"
                android:gravity="center_vertical"
                android:padding="15dp"
                android:text="@string/faq2_title"
                android:textColor="#494748"
                android:fontFamily="@font/gmarketmedium"
                android:textSize="15dp" />
            <LinearLayout
                android:id="@+id/faq2_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00ffffff"
                    android:gravity="left"
                    android:text="@string/faq2_content"
                    android:padding="15dp"
                    android:textColor="#949596"
                    android:fontFamily="@font/gmarketmedium"
                    android:textSize="11dp" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerInParent="true"
                android:background="#949596"/>
            <TextView
                android:id="@+id/faq3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00ffffff"
                android:gravity="center_vertical"
                android:padding="15dp"
                android:text="@string/faq3_title"
                android:textColor="#494748"
                android:fontFamily="@font/gmarketmedium"
                android:textSize="15dp" />
            <LinearLayout
                android:id="@+id/faq3_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00ffffff"
                    android:gravity="left"
                    android:text="@string/faq3_content"
                    android:padding="15dp"
                    android:textColor="#949596"
                    android:fontFamily="@font/gmarketmedium"
                    android:textSize="11dp" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerInParent="true"
                android:background="#949596"/>
            <TextView
                android:id="@+id/faq4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00ffffff"
                android:gravity="center_vertical"
                android:padding="15dp"
                android:text="@string/faq4_title"
                android:textColor="#494748"
                android:fontFamily="@font/gmarketmedium"
                android:textSize="15dp" />
            <LinearLayout
                android:id="@+id/faq4_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00ffffff"
                    android:gravity="left"
                    android:text="@string/faq4_content"
                    android:padding="15dp"
                    android:textColor="#949596"
                    android:fontFamily="@font/gmarketmedium"
                    android:textSize="11dp" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerInParent="true"
                android:background="#949596"/>
            <TextView
                android:id="@+id/faq5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00ffffff"
                android:gravity="center_vertical"
                android:padding="15dp"
                android:text="@string/faq5_title"
                android:textColor="#494748"
                android:fontFamily="@font/gmarketmedium"
                android:textSize="15dp" />
            <LinearLayout
                android:id="@+id/faq5_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00ffffff"
                    android:gravity="left"
                    android:text="@string/faq5_content"
                    android:padding="15dp"
                    android:textColor="#949596"
                    android:fontFamily="@font/gmarketmedium"
                    android:textSize="11dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>